@@ -5,7 +5,8 @@ Development
 ===========
 Dannii Willis <curiousdannii@gmail.com>
 René-Gilles Deberdt
-Yağız
+Ya??z
+vbgamer45
 
 Translations
 ============
@@ -15,4 +16,4 @@ Daniel J Karlsson <daniel.j.karlsson@gmail.com>
 René-Gilles Deberdt
 Sergei Sedov <sedov@webmail.perm.ru>
 shaitan <shaitan@passion-xbmc.org>
-Yağız
+Ya??z
